# pi-challenge

./: .gitignore  README.md  docker-compose.yaml  env.example  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 25d227c6428b_create_character_table.py
compose/local/: Dockerfile  start
src/: main.py
src/character/: models.py  router.py  schemas.py  service.py
src/character/tests/: factories.py  test_character.py
src/settings/: config.py  conftest.py  database.py
