[tool.poetry]
name = "pi-challenge"
version = "0.1.0"
description = "Desafio PI - Python"
authors = ["David S.M <davidsanchezmotran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
