[tool.poetry]
name = "pi-challenge"
version = "0.1.0"
description = "Desafio PI - Python"
authors = ["David S.M <davidsanchezmotran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
python-decouple = "^3.8"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
